# DocClassifier

./: .gitignore  MANIFEST.in  README.md  README_cn.md  README_tw.md  setup.cfg
.github/workflows/: pull_request.yml  release.yml
benchmark/: README.md  benchmark.py
demo/: README.md  README_cn.md  demo_ipcam.py
docclassifier/: __init__.py  classifier.py
docclassifier/docbank/: README.md
docclassifier/margin_based/: __init__.py  infer.py
docker/: Dockerfile  build.bash  to_onnx.bash  train.bash
model/: README.md  __init__.py  component.py  dataset.py  model.py  to_onnx.py  trainer.py
model/config/: efficientnet_b0_cosface_f256_r128.yaml  efficientnet_b0_cosface_f256_r128_imagenet.yaml  efficientnet_b0_cosface_f256_r128_squeeze_imagenet.yaml  efficientnet_b0_cosface_f256_r128_squeeze_lbn_imagenet.yaml  lcnet050_arcface_96.yaml  lcnet050_arcface_f128_r96.yaml  lcnet050_arcface_f256_r128.yaml  lcnet050_arcface_f256_r128_bn.yaml  lcnet050_arcface_f256_r128_from_scratch.yaml  lcnet050_arcface_f256_r128_squeeze.yaml  lcnet050_arcface_f512_r128_gap.yaml  lcnet050_cosface_96.yaml  lcnet050_cosface_f128_r128.yaml  lcnet050_cosface_f128_r96.yaml  lcnet050_cosface_f256_r128.yaml  lcnet050_cosface_f256_r128_bn.yaml  lcnet050_cosface_f256_r128_from_scratch.yaml  lcnet050_cosface_f256_r128_gap.yaml  lcnet050_cosface_f256_r128_ln.yaml  lcnet050_cosface_f256_r128_squeeze.yaml  lcnet050_cosface_f256_r128_squeeze_imagenet.yaml  lcnet050_cosface_f256_r128_squeeze_imagenet_clip.yaml  lcnet050_cosface_f256_r96.yaml  (+5 more)
tests/: test_benchmark.py  test_classifier.py
(+6 files in other folders)
